2004-12-21  Michael Natterer  <mitch@gimp.org>

	* app/actions/gradient-editor-actions.c
	(gradient_editor_actions_update): if the dialog is insensitive,
	disable all actions which modify the gradient. Fixes bug #161411.

	* app/actions/gradient-editor-commands.c: update the UI manager
	after setting the dialog sensitive/insensitive so te above works.

2004-12-20  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/unsharp.c: more code cleanup.

2004-12-20  Sven Neumann  <sven@gimp.org>

	* libgimp/gimpdrawablepreview.c (gimp_drawable_preview_draw_region):
	unset the dirty flag on the GimpPixelRgn used to iterate the region.

	* libgimp/gimppixelrgn.c (gimp_pixel_rgn_init): improved docs.

2004-12-20  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/unsharp.c: code cleanup, no real changes.

2004-12-20  Sven Neumann  <sven@gimp.org>

	* configure.in: bumped version to 2.2.1.

	* plug-ins/FractalExplorer/FractalExplorer.c: applied patch from
	Yeti that fixes a memory corruption (bug #161729).

2004-12-19  Sven Neumann  <sven@gimp.org>

	* Made 2.2.0 release.