@@ -1,3 +1,8 @@
+2004-12-21  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/unsharp.c (preview_update): fixed bug #157910.
+	More code cleanup and some trivial optimizations.
+
 2004-12-21  Michael Natterer  <mitch@gimp.org>
 
 	* app/actions/gradient-editor-actions.c
